# mle-bench-fork

./: .gitignore  ec2-startup-aide-dev.sh  ec2-startup-aide.sh  ec2-startup-aira-dojo.sh  ec2-startup-build.sh  ec2-startup-mlmaster.sh  ec2-startup-rdagent.sh  ec2-startup.sh  launch-ec2-aira-dojo.sh  launch-ec2-mlmaster.sh  launch-ec2-rdagent.sh  launch-ec2.sh  run.sh  run_agent.py
agents/: apptainer_client.py  run.py  (+3 more)
agents/airadojo/: .env_default  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  config.yaml  environment.yaml  grading_server.out  grading_server.py  install_mlebench.sh  launch_server.sh  nohup.out  pyproject.toml  requirements.txt  start.sh
agents/airadojo/.streamlit/: config.toml
agents/airadojo/docs/: BUILD_SUPERIMAGE.md  INSTALLATION.md  LOGGING.md  PROJECT_STRUCTURE.md  RUNNING_EXPERIMENTS.md  SOLVER_DEVELOPMENT.md  TASK_DEVELOPMENT.md
agents/airadojo/notebooks/: analyze_results.ipynb
agents/airadojo/src/aira_core/config/: base.py
agents/airadojo/src/dojo/: grade_code.py  main_run.py  main_runner_job_array.py
agents/airadojo/src/dojo/analysis_utils/: journal_to_tree.py  meta_data_wrangling.py  meta_error_summary.py  meta_tree_analysis.py
agents/airadojo/src/dojo/config_dataclasses/: benchmark.py  logger.py  metadata.py  run.py  runner.py  utils.py
agents/airadojo/src/dojo/config_dataclasses/client/: base.py
agents/airadojo/src/dojo/config_dataclasses/interpreter/: __init__.py  base.py  jupyter.py  python.py
agents/airadojo/src/dojo/config_dataclasses/launcher/: base.py  slurm.py
agents/airadojo/src/dojo/config_dataclasses/llm/: generic_llm.py  jinjaprompt.py
agents/airadojo/src/dojo/config_dataclasses/omegaconf/: resolvers.py
agents/airadojo/src/dojo/config_dataclasses/operators/: base.py  memory.py
agents/airadojo/src/dojo/config_dataclasses/solver/: __init__.py  base.py  evo.py  greedy.py  mcts.py
agents/airadojo/src/dojo/config_dataclasses/task/: __init__.py  base.py  mlebench.py
agents/airadojo/src/dojo/configs/: default_run.yaml  default_runner.yaml
agents/airadojo/src/dojo/configs/_exp/: run_example.yaml  runner_example.yaml  runner_multi_example.yaml
agents/airadojo/src/dojo/configs/interpreter/: jupyter.yaml  python.yaml
agents/airadojo/src/dojo/configs/launcher/: slurm.yaml
agents/airadojo/src/dojo/configs/logger/: base_logger.yaml
agents/airadojo/src/dojo/configs/metadata/: base_metadata.yaml
agents/airadojo/src/dojo/configs/solver/: evo.yaml  greedy.yaml  mcts.yaml
agents/airadojo/src/dojo/core/interpreters/: base.py  python.py  utils.py
agents/airadojo/src/dojo/solvers/: utils.py
agents/airadojo/src/dojo/ui/: README.md  lightweight_dashboard.py  requirements.txt  style.css  viz_utils.py
agents/airadojo/src/dojo/utils/: code_parsing.py  config.py  environment.py  experiment_logs.py  git.py  helpers.py  logger.py  rich_utils.py  slurm.py  state.py
(+211 files in other folders)
